external-crates/move/crates/move-compiler/tests/move_2024/expansion/native_macro.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E02007]: invalid 'fun' declaration
  ┌─ tests/move_2024/expansion/native_macro.move:3:5
  │
3 │     native macro fun foo();
  │     ^^^^^^ ----- Function declared as 'macro' here
  │     │       
  │     Invalid function declaration. 'native' functions cannot be 'macro'
